src/objects/ProjectedUplift__c.object
<CustomObject>
    <description>SFDC1-6569 The renewal unit price is loaded at an uplifted price, the uplifted price is stored for historical reporting and as the renewal process moves forward the renewal unit price if not updated by a user the Sales Pricing Team updates SAP with a recommended pricing amount which then is updated in SFDC to be the new unit price. The recommended price is also captured on its own for sales to reference and for reporting purposes.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SFDC1-6569 Allow the row to be active/inactive</description>
        <inlineHelpText>Specify if the record is active/inactive</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-6569 Comments and Notes for administrative purposes.</description>
        <inlineHelpText>Please enter comments/notes for this record</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>SFDC1-6569 This is the end date that this Uplift value is valid for – Used to calculate using the Contract End Date of the Renewal Opportunity.</description>
        <inlineHelpText>Please enter an end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6569 This is will be a look up to the Family__C Object as the lookup to the Family Uplift value. The ID between the two objects is the basis for the lookup but the display should be the name.</description>
        <inlineHelpText>Please select a Product Family</inlineHelpText>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Projected Uplifts</relationshipLabel>
        <relationshipName>ProjectedUplifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>SFDC1-6569 This is the start date that this Uplift value is valid for – Used to calculate using the Contract Start Date of the Renewal Opportunity.</description>
        <inlineHelpText>Please enter a start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <description>SFDC1-6569 This is the percent value to be applied in the calculation against the Previous Year Unit Price.</description>
        <inlineHelpText>Please enter an Uplift percent value</inlineHelpText>
        <label>Uplift %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Projected Uplift</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projected Uplifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>